force-app/main/default/objects/Invoice__c/Invoice__c.object-meta.xml
<CustomObject>
    <label>Facture</label>
    <nameField>
        <displayFormat>FAC-{0000}</displayFormat>
        <label>Numéro facture</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Factures</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>