force-app/main/default/objects/Invoice__c/fields/Date_Facture__c.field-meta.xml
<CustomField>
    <fullName>Date_Facture__c</fullName>
    <label>Date de facture</label>
    <type>Date</type>
</CustomField>