force-app/main/default/objects/Invoice__c/fields/Periode__c.field-meta.xml
<CustomField>
    <fullName>Periode__c</fullName>
    <label>Période</label>
    <length>50</length>
    <type>Text</type>
</CustomField>