force-app/main/default/objects/Invoice__c/fields/Statut__c.field-meta.xml
<CustomField>
    <fullName>Statut__c</fullName>
    <label>Statut</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Brouillon</fullName>
                <default>true</default>
                <label>Brouillon</label>
            </value>
            <value>
                <fullName>Envoyée</fullName>
            </value>
            <value>
                <fullName>Payée</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>