force-app/main/default/objects/Invoice__c/listViews/Toutes_les_factures.listView-meta.xml
<ListView>
    <fullName>Toutes_les_factures</fullName>
    <columns>NAME</columns>
    <columns>Contract__c</columns>
    <columns>Type__c</columns>
    <columns>Montant__c</columns>
    <columns>Date_Facture__c</columns>
    <columns>Statut__c</columns>
    <columns>Periode__c</columns>
    <filterScope>Everything</filterScope>
    <label>Toutes les factures</label>
    <language>fr</language>
</ListView>